Center the header, give color to header

--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="title">ROCK PAPER SCISSORS</h1>
-        <p>
-            Rock beats Scissors | Scissors beats Paper | Paper beats Rock
+        <h1 class="title">
+            <span class="red-color">ROCK</span>
+            <span class="green-color">PAPER</span>
+            <span class="blue-color">SCISSORS</span>
+        </h1>
+        <p class="instruction">
+            <span class="red-color">Rock</span> beats <span class="blue-color">Scissors</span> | 
+            <span class="blue-color">Scissors</span> beats <span class="green-color">Paper</span> | 
+            <span class="green-color">Paper</span> beats <span class="red-color">Rock</span>
         </p>
     </header>
     <main class="main">
