Create basic css styling to all html elements

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 
         <div class="game-output">
             <div class="game-choice">
-                <div class="symbol" id="playerSymbol"></div>
-                <p class="identity" id="player">Player</p>
+                <div class="symbol" id="playerSymbol">❔</div>
+                <p class="identity" id="player">Player: 0</p>
             </div>
             <div class="game-choice">
-                <div class="symbol" id="computerSymbol"></div>
-                <p class="identity" id="computer">Computer</p>
+                <div class="symbol" id="computerSymbol">❔</div>
+                <p class="identity" id="computer">Computer: 0</p>
             </div>
         </div>
 
         <div class="wrapper">
             <div class="game-counter">
                 <p class="round">Round</p>
-                <p class="round-counter"></p>
+                <p class="round-counter">0</p>
             </div>
             <div class="scoreboard">
                 <p class="lives">Your Lives: 5 | Enemy's Lives: 5</p>
