Complete js script for web responsivity

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <div class="game-output">
             <div class="game-choice">
                 <div class="symbol" id="playerSymbol">❔</div>
-                <p class="identity" id="player">Player: 0</p>
+                <p class="identity" id="player">Player</p>
             </div>
             <div class="game-choice">
                 <div class="symbol" id="computerSymbol">❔</div>
-                <p class="identity" id="computer">Computer: 0</p>
+                <p class="identity" id="computer">Computer</p>
             </div>
         </div>
 
@@ -68,6 +68,6 @@
 
 
 
-    <script src = "random.js"></script>
+    <script src = "script.js"></script>
 </body>
 </html>
