Fix symbol when round 0

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
         <div class="game-output">
             <div class="game-choice">
-                <div class="symbol" id="playerSymbol">❔</div>
+                <div class="symbol" id="playerSymbol">?</div>
                 <p class="identity" id="player">Player</p>
             </div>
             <div class="game-choice">
-                <div class="symbol" id="computerSymbol">❔</div>
+                <div class="symbol" id="computerSymbol">?</div>
                 <p class="identity" id="computer">Computer</p>
             </div>
         </div>
